--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
-sudo: false
 language: ruby
-rvm:
-  - 2.3.1
-before_install: gem install bundler -v 1.13.1
+cache: bundler
+sudo: false
+
+matrix:
+  include:
+    - rvm: 2.0.0
+    - rvm: 2.1
+    - rvm: 2.2
+    - rvm: 2.3.1
+    - rvm: jruby-19mode
+    - os: osx
