--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,13 @@ env:
     - NODE_VERSION=v0.12
     - NODE_VERSION=v4
     - NODE_VERSION=v6
+rvm:
+  - 2.0.0
+  - 2.3.1
+  - jruby-19mode
 before_install:
   - curl -o- https://raw.githubusercontent.com/creationix/nvm/v0.32.1/install.sh | bash
   - nvm install $NODE_VERSION
-matrix:
-  include:
-    - rvm: 2.0.0
-    - rvm: 2.1
-    - rvm: 2.2
-    - rvm: 2.3.1
-    - rvm: jruby-19mode
-    - os: osx
+os:
+  - osx
+  - linux
