--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ rvm:
   - 2.3.1
   - jruby-head
 before_install:
+  - gem install bundler
+  - gem update bundler
   - . $HOME/.nvm/nvm.sh
   - nvm install $NODE_VERSION
 os:
