--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+      with:
+        submodules: true
     - name: Set up Ruby ${{ matrix.ruby-version }}
       uses: actions/setup-ruby@v1
       with:
