Also test on MacOS

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,12 @@ jobs:
   build:
     strategy:
       matrix:
+        os: [ubuntu-latest, macOS-latest]
         node-version: [8.x, 10.x, 12.x]
         ruby-version: [2.4.x, 2.5.x, 2.6.x]
 
-    runs-on: ubuntu-latest
-    name: Test Ruby ${{ matrix.ruby-version }} and Node.js ${{ matrix.node-version }}
+    runs-on: ${{ matrix.os }}
+    name: Test Ruby ${{ matrix.ruby-version }} and Node.js ${{ matrix.node-version }} on ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v1
